--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,8 +1,8 @@
 -   id: helm
     name: helm (via docker)
     description: helm
-    entry: helm template 
+      #entry: helm template 
     language: docker
-      #args: [./deploy/charts/test -f deploy/charts/test/values.yaml']
+    args: [helm template test ./deploy/charts/test -f deploy/charts/test/values.yaml']
     always_run: true
     pass_filenames: false
