--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,6 @@
     description: helm
     entry: /docker_entrypoint.sh
     language: docker
-    args: [ /src/deploy/charts/test -f /src/deploy/charts/test/values.yaml]
+    args: [ /src/deploy/chart/test -f /src/deploy/chart/test/values.yaml]
     always_run: true
     pass_filenames: false
