--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,6 @@
     description: helm
     entry: /docker_entrypoint.sh
     language: docker
-    args: ["dev" "us-east-2" "test"]
+    args: [dev us-east-2 test]
     always_run: true
     pass_filenames: false
